--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server",
     "tsc:w": "tsc -w",
     "start": "npm run tsc:w",
     "typings": "typings"
@@ -30,7 +31,7 @@
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "typescript": "2.4.0",
+    "typescript": "^2.0.2",
     "typings": "^1.3.2"
   }
 }
